--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     {% include head/custom.html %}
     {% if page.use_math %}
       {% include mathjax_support.html %}
+    {% last_modified_at %}
     {% endif %}
   </head>
 
